Implemented liquibase for database migrations

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.config.import=optional:secrets.properties
 spring.jackson.property-naming-strategy:SNAKE_CASE
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.datasource.driver-class-name=org.postgresql.Driver
