Updated user entity in db and created default user in liquibase

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -4,3 +4,7 @@ databaseChangeLog:
           username: postgres
   - include:
       file: db/changelog/2025/05/22-01-changelog.xml
+  - include:
+      file: db/changelog/2025/05/25-01-changelog.xml
+  - include:
+      file: db/changelog/default/add-user.xml
